FIX: video alignment

--- a/pages/home/home.scss
+++ b/pages/home/home.scss
@@ -786,8 +786,9 @@
           left: 0;
           right: 0;
           margin: 0 auto;
-          width: 70vw;
-          top: -16px;
+          width: 71vw;
+          top: -14px;
+          border-radius: 33px 33px 0 0;
         }
       }
     }
